# textcase

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  cliff.toml  index.html  justfile  mkdocs.yaml  objects.inv  pyproject.toml  shell.nix  sitemap.xml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: coverage.yaml  docs.yaml  preview.yaml  publish.yaml  style.yaml  test.yaml
advanced/boundaries/: index.html
advanced/cases/: index.html
assets/snippets/index/: acronyms.py  non_ascii.py
assets/stylesheets/: textcase.73c35c.min.css  textcase.971cfb.min.css
changelog/: index.html
docs/: config.yaml  mkdocs.yaml
docs/.overrides/partials/: toc-item.html
docs/.snippets/: acronyms.py  cases.py  match.py  non_ascii.py  precision.py  punctuation.py
docs/.snippets/boundaries/: custom.py  specificity.py
docs/.snippets/cases/: custom_convert.py  custom_is_case.py
docs/.snippets/index/: convert.py  is_case.py  precision.py  special.py
docs/assets/stylesheets/: textcase.css
docs/docs/: index.md
docs/docs/learn/: boundaries.md  (+2 more)
docs/en/: changelog.md  index.md
docs/ru/: changelog.md  index.md  reference.md
integrations/sqlalchemy/: index.html
learn/boundaries/: index.html
learn/cases/: index.html
learn/converter/: index.html
learn/recipes/: index.html
pr-preview/pr-20/: 404.html  index.html  sitemap.xml
pr-preview/pr-21/: 404.html  index.html  sitemap.xml
pr-preview/pr-22/: 404.html  index.html  sitemap.xml
pr-preview/pr-23/: 404.html  index.html  sitemap.xml
pr-preview/pr-24/: 404.html  index.html  sitemap.xml
pr-preview/pr-25/: 404.html  index.html  sitemap.xml
pr-preview/pr-26/: 404.html  index.html  sitemap.xml
pr-preview/pr-27/: 404.html  index.html  sitemap.xml
pr-preview/pr-28/: 404.html  index.html  sitemap.xml
pr-preview/pr-29/: 404.html  index.html  sitemap.xml
pr-preview/pr-30/: 404.html  index.html  sitemap.xml
pr-preview/pr-31/: 404.html  index.html  sitemap.xml
pr-preview/pr-32/: 404.html  index.html  sitemap.xml
pr-preview/pr-33/: 404.html  index.html  objects.inv  sitemap.xml
pr-preview/pr-35/: 404.html  index.html  sitemap.xml
pr-preview/pr-36/: 404.html  index.html  sitemap.xml
pr-preview/pr-37/: 404.html  index.html  sitemap.xml
pr-preview/pr-38/: 404.html  index.html  sitemap.xml
pr-preview/pr-39/: 404.html  index.html  sitemap.xml
pr-preview/pr-41/: 404.html  index.html  sitemap.xml
pr-preview/pr-42/: 404.html  index.html  sitemap.xml
pr-preview/pr-43/: 404.html  index.html  sitemap.xml
pr-preview/pr-44/: 404.html  index.html  sitemap.xml
pr-preview/pr-45/: 404.html  index.html  sitemap.xml
pr-preview/pr-46/: 404.html  index.html  sitemap.xml
pr-preview/pr-47/: 404.html  index.html  sitemap.xml
pr-preview/pr-48/: 404.html  index.html  sitemap.xml
pr-preview/pr-50/: 404.html  index.html  sitemap.xml
pr-preview/pr-51/: 404.html  index.html  sitemap.xml
pr-preview/pr-52/: 404.html  index.html  sitemap.xml
pr-preview/pr-53/: 404.html  index.html  sitemap.xml
pr-preview/pr-54/: 404.html  index.html  sitemap.xml
pr-preview/pr-55/: 404.html  index.html  sitemap.xml
pr-preview/pr-56/: 404.html  index.html  sitemap.xml
pr-preview/pr-57/: 404.html  index.html  sitemap.xml
pr-preview/pr-59/: 404.html  index.html  sitemap.xml
pr-preview/pr-60/: 404.html  index.html  sitemap.xml
pr-preview/pr-61/: 404.html  index.html  sitemap.xml
pr-preview/pr-62/: 404.html  index.html  sitemap.xml
pr-preview/pr-63/: 404.html  index.html  sitemap.xml
pr-preview/pr-64/: 404.html  index.html  sitemap.xml
pr-preview/pr-65/: 404.html  index.html  sitemap.xml
pr-preview/pr-66/: 404.html  index.html  sitemap.xml
pr-preview/pr-67/: 404.html  index.html  sitemap.xml
pr-preview/pr-68/: 404.html  index.html  sitemap.xml
pr-preview/pr-69/: 404.html  index.html  sitemap.xml
pr-preview/pr-70/: 404.html  index.html  sitemap.xml
pr-preview/pr-71/: 404.html  index.html  sitemap.xml
pr-preview/pr-72/: 404.html  index.html  sitemap.xml
pr-preview/pr-73/: 404.html  index.html  sitemap.xml
pr-preview/pr-74/: 404.html  index.html  sitemap.xml
pr-preview/pr-75/: 404.html  index.html  sitemap.xml
pr-preview/pr-76/: 404.html  index.html  sitemap.xml
pr-preview/pr-77/: 404.html  index.html  sitemap.xml
pr-preview/pr-78/: 404.html  index.html  sitemap.xml
pr-preview/pr-79/: 404.html  index.html  sitemap.xml
pr-preview/pr-80/: 404.html  index.html  sitemap.xml
reference/: index.html
reference/boundary/: index.html
reference/case/: index.html
reference/convert/: index.html
reference/converter/: index.html
reference/is_case/: index.html
reference/pattern/: index.html
reference/textcase/: index.html
ru/: index.html
ru/changelog/: index.html
ru/reference/: index.html
search/: search_index.json
src/textcase/: __init__.py
tests/: test_boundary_custom.py  test_case_all.py  test_case_custom.py  test_case_match.py  test_converter.py  test_non_ascii.py  test_precision.py  test_punctuation.py
tests/boundaries/: test_acronym.py  test_boundary_from_delimiter.py  test_boundary_init.py  test_digit_lower.py  test_digit_upper.py  test_hyphen.py  test_interpunct.py  test_lower_digit.py  test_lower_upper.py  test_space.py  test_underscore.py  test_upper_digit.py  test_upper_lower.py
tests/boundary/: test_boundaries.py  test_custom.py
tests/case/: test_custom.py
tests/cases/: test_camel.py  test_case_init.py  test_constant.py  test_kebab.py  test_lower.py  test_middot.py  test_pascal.py  test_sentence.py  test_snake.py  test_title.py  test_upper.py
tests/convert/: test_acronyms.py  test_cases.py  test_non_ascii.py  test_precision.py  test_special.py
tests/converter/: test_converter.py
tests/is_case/: test_cases.py
tests/pattern/: test_pattern.py
textcase/: __init__.py  boundary.py  case.py  converter.py  pattern.py
(+694 files in other folders)
