[project]
name = "textcase"
version = "0.4.4"
description = "Python library for text case conversions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Nikita Gaziev", email = "zobweyt@gmail.com" },
]
maintainers = [
    { name = "Nikita Gaziev", email = "zobweyt@gmail.com" },
]
keywords = [
    "camel-case",
    "case",
    "constant-case",
    "conversion",
    "kebab-case",
    "middot-case",
    "lower-case",
    "pascal-case",
    "sentence-case",
    "snake-case",
    "text",
    "title-case",
    "upper-case",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://zobweyt.github.io/textcase"
Documentation = "https://zobweyt.github.io/textcase"
Repository = "https://github.com/zobweyt/textcase"
Issues = "https://github.com/zobweyt/textcase/issues"
Changelog = "https://github.com/zobweyt/textcase/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
docs = [
    "cairosvg>=2.7.1",
    "git-cliff>=2.10.1",
    "griffe-typingdoc>=0.2.8",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-material>=9.6.11",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=0.29.1",
    "pillow>=11.1.0",
    "termynal>=0.13.0",
]
style = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]
tests = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.uv]
default-groups = []

[tool.mypy]
files = [
    "docs/.snippets",
    "src",
    "tests",
]
strict = true

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
    "src",
]
exclude = [
    "docs",
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/textcase",
]
